<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="calculatorFragment"
            type="thechinkysight.app.payyourstay.screens.CalculatorFragment" />

        <variable
            name="calculatorViewModel"
            type="thechinkysight.app.payyourstay.viewmodels.CalculatorViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.CalculatorFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:title="@string/app_name"
                app:titleCentered="true" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="16dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:visibility="invisible" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/previousElecMeterReadingTextFieldTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/previous_elec_meter_reading"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_bolt_24px">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/currentElecMeterReadingTextFieldTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/current_elec_meter_reading"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_bolt_24px">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/electricityRatePerUnitTextFieldTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:hint="@string/electricity_rate_per_unit"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_payment_24px">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/waterFeeTextFieldTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/water_fee"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_water_drop_24px">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/garbageFeeTextFieldTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:hint="@string/garbage_fee"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_delete_24px">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/rentTextFieldTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:hint="@string/rent"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_payment_24px">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/calculateButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->calculatorViewModel.calculate()}"
                    android:paddingVertical="18dp"
                    android:text="@string/calculate"
                    android:textAllCaps="true"
                    app:cornerRadius="4dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:visibility="invisible" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>